[project]
name = "mhctl"
version = "0.0.1"
dependencies = [
    "typer",
    "yamlium",
    "pathlib",
    "httpx",
    "xxhash"
]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
requires-python = ">= 3.9"
[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "config*", "runtime*", "providers*"]  # Only actual Python packages
exclude = ["data*"]  # Exclude data directory if it's not a package
[project.optional-dependencies]
function1 = []
function2 = []

[project.scripts]
mhctl = "cli:app"
